--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,42 @@
-appdirs==1.4.4
-attrs==21.4.0
-audioread==2.1.9
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-cycler==0.11.0
-Cython==0.29.28
-decorator==5.1.1
+contourpy==1.2.0
+cycler==0.12.1
 ffmpeg-python==0.2.0
-fonttools==4.32.0
-future==0.18.2
-idna==3.3
-importlib-resources==5.7.0
-joblib==1.1.0
-jsonschema==4.4.0
-kiwisolver==1.4.2
-librosa==0.9.1
-llvmlite==0.36.0
-matplotlib==3.5.1
-musdb==0.4.0
-museval==0.4.0
-numba==0.53.0
-numpy==1.22.3
-packaging==21.3
-pandas==1.4.2
-Pillow==9.1.0
-pooch==1.6.0
-pyaml==21.10.1
-pycparser==2.21
-pyparsing==3.0.8
-pyrsistent==0.18.1
+filelock==3.13.1
+fonttools==4.47.0
+fsspec==2023.12.2
+future==0.18.3
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+mpmath==1.3.0
+musdb==0.4.2
+networkx==3.2.1
+numpy==1.26.2
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+packaging==23.2
+Pillow==10.1.0
+pyaml==23.9.7
+pyparsing==3.1.1
 python-dateutil==2.8.2
-pytz==2022.1
-PyYAML==6.0
-requests==2.27.1
-resampy==0.2.2
-scikit-learn==1.0.2
-scipy==1.8.0
-simplejson==3.17.6
+PyYAML==6.0.1
 six==1.16.0
-SoundFile==0.10.3.post1
 stempeg==0.2.3
-threadpoolctl==3.1.0
-torch==1.10.0
-torch-specinv==0.2
-torchaudio==0.10.0
-tqdm==4.64.0
-typing_extensions==4.1.1
-urllib3==1.26.9
-zipp==3.8.0
+sympy==1.12
+torch==2.1.2
+torch-specinv @ git+https://github.com/yoyololicon/spectrogram-inversion@82fa16b65928c33c94ef13f34bf42f6d57960be4
+torchaudio==2.1.2
+tqdm==4.66.1
+triton==2.1.0
+typing_extensions==4.9.0
